--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,8 +8,7 @@
 # WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
 # implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
-sbin_PROGRAMS = zefiro
-zefiro_SOURCES = zefiro.c
-#zefiro_LDADD = -lpthread
-zefiro_CPPFLAGS = -I$(top_srcdir)/include -DLINUX
-
+sbin_PROGRAMS = zefirod
+zefirod_SOURCES = zefiro.c
+zefirod_CPPFLAGS = -I$(top_srcdir)/include -I/usr/include/mysql -DLINUX
+zefirod_LDADD = -L/usr/lib64/mysql -lmysqlclient_r -lpthread -lm -lrt -lssl -lcrypto -ldl
